# CruceroDelEste

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  Crucero Del Este - Presupuesto.docx  Crucero del Este - Modulos Extras.txt  DEPLOY.md  DEVELOPMENT.md  MP-Doc.txt  PERFORMANCE_AUDIT.md  README.md  TEST_PLAN.md  alembic.ini  docker-compose.yml  nginx-expresorioparana-admin.conf  nginx-expresorioparana-api.conf  nginx-expresorioparana.conf  test-landing.html
.claude/: settings.local.json
app/: config.py  database.py  deps.py
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  deps.py  errors.py  exceptions.py  main.py
backend/app/models/: __init__.py  booking.py  trip.py
backend/app/routers/: admin.py  admin_catalog.py  bookings.py  payments.py  trips.py
backend/app/schemas/: admin.py  bookings.py  trips.py
backend/app/services/: booking.py  chargeback.py  email.py  http.py  inventory.py  payment.py  pricing.py
backend/migrations/: env.py
backend/migrations/versions/: 6a04bf7f_initial_schema.py  a1b2c3d4_add_route_stops.py  a3d5e8f1_add_luggage_count_to_passengers.py  add_province_to_stops.py  b2c3d4e5_add_seat_layout_seats.py  b5e3a9f8_add_chargebacks.py  b7c3a1d2_add_stops_table.py  c3d4e5f6_add_blocked_seat_status.py  c9d4e2f1_add_refunded_and_refund_requests.py  d1e2f3a4_add_trip_stop_overrides.py  d4b1f9e2_add_seat_layouts.py  e5b8c3a2_add_contact_email_to_bookings.py  f3a9c7d5_add_trip_indexes.py
backend/scripts/: create_admin.py  regenerate_seats.py  seed_layout_seats.py  seed_routes_and_trips.py  seed_seat_layout.py  seed_stops.py
backend/tasks/: reminders.py
backend/templates/email/: confirmation.html  confirmation.txt  feedback.html  feedback.txt  reminder.html  reminder.txt
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_admin_catalog.py  test_admin_router.py  test_booking_service.py  test_bookings_router.py  test_concurrency.py  test_inventory.py  test_payments_router.py  test_pricing.py  test_refund_requests.py  test_reminders_jobs.py  test_trips_router.py
backend/tests/unit/: test_email_service.py  test_payment_signature.py  test_schemas.py
frontend-admin/: .dockerignore  ADMIN_DESIGN.md  CLAUDE.md  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  (+3 more)
(+148 files in other folders)
