[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crucerodeleste"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.27",
    "alembic>=1.10",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.0",
    "mercadopago>=2.0",
    "resend>=0.5",
    "jinja2>=3.1",
    "PyJWT>=2.6",
    "passlib[bcrypt]>=1.7",
    "apscheduler>=3.10,<4.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-env>=1.0",
    "httpx>=0.24",
    "testcontainers[postgres]>=3.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
