[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crucerodeleste"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.27",
    "alembic>=1.10",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.0",
    "mercadopago>=2.0",
    "resend>=0.5",
    "jinja2>=3.1",
    "PyJWT>=2.6",
    "passlib[bcrypt]>=1.7",
    "bcrypt==4.0.1",
    "apscheduler>=3.10,<4.0",
    "psycopg2-binary>=2.9",
    "slowapi>=0.1.9",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-env>=1.0",
    "httpx>=0.24",
    "testcontainers[postgres]>=3.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
env = [
    "DATABASE_URL=postgresql+asyncpg://test:test@localhost:5432/test",
    "SYNC_DATABASE_URL=postgresql://test:test@localhost:5432/test",
    "BACKEND_URL=http://test.example.com",
    "FRONTEND_URL=http://frontend.example.com",
    "SECRET_KEY=test-secret-key-for-pytest-only-not-production",
    "MERCADOPAGO_ACCESS_TOKEN=TEST-fake-access-token",
    "MERCADOPAGO_WEBHOOK_SECRET=fake-webhook-secret",
    "RESEND_API_KEY=re_fake_api_key",
    "JWT_EXPIRY_MINUTES=60",
    "BOOKING_EXPIRY_MINUTES=15",
    "ENVIRONMENT=dev",
]
[tool.hatch.build.targets.wheel]
packages = ["app"]
